HeroSection OverFlow Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,7 @@
 .brandLogo{
   filter: hue-rotate(290deg);
 }
+.highlighted-text{
+  font-weight: 600;
+  color:#44924c;
+}
